5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/1064/executions/1582_994.log
== TEST (2019-04-29 10:25:03) 
-- CODE:
print("Universidade Federal do Amazo")
-- OUTPUT:
Universidade Federal do Amazo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 10:25:11) 
-- CODE:
print("Universidade Federal do Amazo")
-- EXECUTION TIME:
0.200532
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazo
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 10:25:20) 
-- CODE:
print("Universidade Federal do Amazonas")
-- EXECUTION TIME:
0.199452
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 10:27:47) 
-- CODE:
print("Universidade Federal do Amazonas"
-- ERROR:
File "XXXX", line 2
    
                                            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
